alignment fix for getting started box

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -4871,7 +4871,7 @@ a.submit_link:hover{
     box-shadow: 0px 0px 5px 1px #ccc;
 	font-size: 13px;
 	padding: 10px;
-	width: 340px;
+	width: 320px;
 	margin: 10px;
 }
  
